                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.4
  *) [TS-1143] Fixed edge case problems in IpMap.

  *) [TS-1114] Fix to lock vol for CacheVC::write_vector.

  *) [TS-857] Possibly related race in UnixNetVConnection::mainEvent
              on inactivity timeout.

  *) [TS-1149] Pretty up automake output.


Changes with Apache Traffic Server 3.1.3
  *) [TS-1145] Additional clang build fixes. Author: Darrin Jewell.

  *) [TS-1144] Fix out of tree builds. Author: Darrin Jewell.

  *) [TS-1138] Fixed off by one range error in IpMap.

  *) [TS-462] Support TLS Server Name Indication (SNI)

  *) [TS-1134] TSNetAcceptNamedProtocol should fail if NPN is not supported.

  *) [TS-1133] Make the max host-header length configure.ac configurable.

  *) [TS-1002] fix custom loggin with cquuc cquup, and introduce cquuh
   to recode the client_req_unmapped_url_host.

  *) [TS-701] Remove mgmt/cli/script_configs.sh

  *) [TS-1124] Move regex_remap, header_filter and stats_over_http from
   the plugin repo to the main repo.

  *) [TS-1111] fix crash in RangeTransform::handle_event

  *) [TS-1109] fix stack dump crashing

  *) [TS-1123] editline/readline conflicts when building on OSX.

  *) [TS-1116] Fixes for building the source with clang/lvm.

  *) [TS-1115] Fixes for building the source with Intel CC (icc).

  *) [TS-1102] Cleanup of Diagnostics code. Author: Uri Shachar and Leif.

  *) [TS-1117] Remove TS_HAS_PURIFY MACRO

  *) [TS-937] EThread::execute still processing cancelled event

  *) [TS-995] Name change for IP support (ink_inet.h).

  *) [TS-841] support TLS NextProtocol negotiation

Changes with Apache Traffic Server 3.1.2

  *) [TS-1110] logstats incorrectly bucketizes all status codes greater 
  than 599 as 5xx. Author: Manjesh Nilange

  *) [TS-1094] Fixed MIME parser so certain sequences of requests on
   keep alive conections no longer wedge it.
